--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <div class="register">
                 <div class="reg-bag"></div>
                 <!-- login and brand -->
+                <div class="back-btn-contianer">
+                    <i class="fa-solid fa-arrow-left back-btn"></i>
+                </div>
                 <div class="log-welcome">
                     <div class="set-card brand-pos">
                         <div class="brand-images">
